# appmap-dotnet

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  ubuntu.yml
aspnet/: AppMap.AspNetCore.csproj  Wrap.cs
clrie/: CMakeLists.txt
clrie/include/clrie/: instruction_factory.h  instruction_graph.h  instrumentation_method.h  method_info.h  module_info.h  type.h
clrie/include/clrie/detail/: enumeration.h
cmake/: CPM.cmake
com/: CMakeLists.txt  README
com/include/: com_base.h  guid.h
com/include/com/: base.h  bstr.h  guid.h  hresult.h  ptr.h
com/source/: hresult.cpp
config/: ProductionBreakpoints_x64.config  ProductionBreakpoints_x64.linux.config  ProductionBreakpoints_x64.osx.config
launcher/: AppLand.AppMap.csproj  Launcher.cs
pal/: CMakeLists.txt  README
pal/source/: bstr.cpp  token.cpp
scripts/: build.sh  docker-build.sh  dotnet-appmap  get-clrie.sh  package.sh  run.sh  test.sh
smoketest/: appmap.yml  appmap_test.sh  expected.appmap.json  modulelist_test.sh
smoketest/hello/: Program.cs
source/: appmap.h  cil.cpp  cil.h  classmap.cpp  classmap.h  config.cpp  config.h  dll.cpp  event.h  events.cpp  events.h  generation.cpp  generation.h  instrumentation.cpp  instrumentation.h  metadata.cpp  metadata.h  method.cpp  method.h  method_info.h  recorder.cpp  recorder.h  resolver.cpp  resolver.h  signature.cpp  signature.h  test_framework.cpp  test_framework.h  type.cpp  type.h  web_framework.cpp
test/: CMakeLists.txt  appmap.yml  main.cpp  metadata.cpp
test/AppMap.Test/: AppMap.Test.csproj  AspNet.cs  Flow.cs  Statics.cs  Threads.cs  Values.cs  normalize.rb  run.sh
test/AppMap.Test/expected/: AppMap.Test.AspNetTest.Builder.appmap.json  AppMap.Test.FlowTest.ExcerciseDisablableConsole.appmap.json  AppMap.Test.StaticsTest.NullableGuid.appmap.json  AppMap.Test.StaticsTest.NullableString.appmap.json  AppMap.Test.ThreadsTest.CanInterleave.appmap.json  AppMap.Test.ValuesTest.ByRef.appmap.json  AppMap.Test.ValuesTest.Generic.appmap.json  AppMap.Test.ValuesTest.NullableGuid.appmap.json  AppMap.Test.ValuesTest.NullableString.appmap.json  AppMap.Test.ValuesTest.NullableUri.appmap.json  AppMap.Test.ValuesTest.Span.appmap.json  AppMap.Test.ValuesTest.Struct.appmap.json
vstest/: AppMapDataCollector.cs  appmap.collector.csproj  appmap.runsettings
